cmake_minimum_required(VERSION 3.13)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)



add_executable(LinkList src/Lab1/LinkList.cpp)
add_executable(SeqList src/Lab1/SeqList.cpp)
add_executable(Lab2 src/Lab2/Palindrome.cpp)
add_executable(BR src/HomeWork/RBTreeTest.cpp)
add_executable(SplayTree src/HomeWork/SplayTreeTest.cpp)
add_executable(Hash src/Lab3/HashTest.cpp)









